2002-09-23  Ken Kocienda  <kocienda@apple.com>

	Fixes for some build problems I missed earlier due to the fact that PB can't handle header dependencies,
	and I did not do a clean build of WebKit.

        * Plugins.subproj/WebPluginStream.m:
        (-[WebNetscapePluginStream receivedError:withDataSource:]): WebFoundation error constant name change.
        (-[WebNetscapePluginStream cancel]): Ditto.
        * WebCoreSupport.subproj/WebCookieAdapter.m:
        (-[WebCookieAdapter cookiesEnabled]): Modified to use [[WebCookieManager sharedCookieManager] acceptPolicy]
	rather than reaching down into CFPreferences directly.
        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (+[WebSubresourceClient startLoadingResource:withURL:referrer:forDataSource:]): WebFoundation error constant name change.
        (-[WebSubresourceClient cancel]): Ditto.
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient didCancelWithHandle:]): Ditto.

2002-09-23  Darin Adler  <darin@apple.com>

        * WebView.subproj/WebHTMLViewPrivate.m:
        (-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
	Don't special case the top level frame's view so much.
        (-[WebHTMLView _recursiveDisplayAllDirtyWithLockFocus:visRect:]): Ditto.
        (-[NSView _web_propagateDirtyRectToAncestor]): Use public method here instead of private.

2002-09-23  Ken Kocienda  <kocienda@apple.com>

        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge reportBadURL:]): WebFoundation error code constant name change
        * WebView.subproj/WebView.m:
        (+[WebView initialize]): WebError addErrorsFromDictionary changed to addErrorsWithCodesAndDescriptions

2002-09-22  Darin Adler  <darin@apple.com>

	- fixed 3057380 -- insertion point shows through elements in front of text fields

        * WebView.subproj/WebHTMLViewPrivate.m: